--- a/index.html
+++ b/index.html
@@ -3,24 +3,336 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Aaron Farrelly – Portfolio</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body>
 
-
-    <header class="bg-dark text-white p-3">
+<body id="home">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <h1 class="mb-0">Aaron Farrelly</h1>
-            <p class="mb-0">Portfolio</p>
+            <a class="navbar-brand" href="#home">AF</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="hero-section text-white d-flex align-items-center hero-pan">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h5 class="text-info" id="greeting">Hello!</h5>
+                    <h1 class="display-3 fw-bold header-pulse">I'm Aaron Farrelly</h1>
+                    <p class="lead">Former Cloud DevOps Engineer | 4th Year Computing Student</p>
+                    <p class="mb-4">Specializing in Azure, Terraform, and Python automation.</p>
+                    <div class="d-flex gap-3">
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
+                            data-bs-target="#contactModal">
+                            Contact Me
+                        </button>
+                        <a href="#projects" class="btn btn-outline-light btn-lg">View Projects</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center d-none d-md-block">
+                    <img src="images/profile_photo.jpeg" alt="Aaron Farrelly"
+                    class="img-fluid rounded-circle border border-4 border-white shadow">
+                </div>
+            </div>
         </div>
     </header>
-    
-    <script src="script.js"></script>
+
+    <div class="container my-5">
+
+        <section id="about" class="py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <h2 class="text-center mb-4 text-primary fw-bold">About Me</h2>
+                    <p class="lead text-muted">
+                        Motivated final-year Computer Science student with hands-on experience in cloud infrastructure,
+                        automation, and software development.
+                    </p>
+                    <p>
+                        During my internship as a <strong>Cloud DevOps Engineer at Irish Life</strong>,
+                        I contributed to securing and maintaining Azure environments using Terraform and PowerShell.
+                        My academic background includes strong foundations in software development, testing, security,
+                        and data analysis.
+                        I’m eager to apply my technical skills, adaptability, and communication strengths to a
+                        rotational graduate role.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="py-5">
+            <h2 class="text-center mb-5 text-primary fw-bold">Technical Skills</h2>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-0 shadow-sm hover-card">
+                        <div class="card-body text-center">
+                        <i class="fa-solid fa-code fa-2x mb-3 text-info"></i>
+                            <h5 class="card-title">Languages</h5>
+                            <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-secondary">Java</span>
+                                <span class="badge bg-secondary">C#</span>
+                                <span class="badge bg-secondary">C++</span>
+                                <span class="badge bg-secondary">JavaScript</span>
+                                <span class="badge bg-secondary">SQL</span>
+                                <span class="badge bg-secondary">PowerShell</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-0 shadow-sm hover-card">
+                        <div class="card-body text-center">
+                            <i class="fa-solid fa-cloud fa-2x mb-3 text-info"></i>
+                            <h5 class="card-title">Cloud & DevOps</h5>
+                            <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                <span class="badge bg-secondary">Azure</span>
+                                <span class="badge bg-secondary">Terraform</span>
+                                <span class="badge bg-secondary">Azure DevOps</span>
+                                <span class="badge bg-secondary">KQL</span>
+                                <span class="badge bg-secondary">Git</span>
+                                <span class="badge bg-secondary">Docker</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 border-0 shadow-sm hover-card">
+                        <div class="card-body text-center">
+                            <i class="fa-solid fa-layer-group fa-2x mb-3 text-info"></i>
+                            <h5 class="card-title">Frameworks & Tools</h5>
+                            <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                <span class="badge bg-secondary">Django</span>
+                                <span class="badge bg-secondary">Blazor WASM</span>
+                                <span class="badge bg-secondary">Bootstrap</span>
+                                <span class="badge bg-secondary">Selenium</span>
+                                <span class="badge bg-secondary">Pytest</span>
+                                <span class="badge bg-secondary">MongoDB</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="experience" class="py-5">
+            <h2 class="mb-4 text-primary fw-bold">Work Experience</h2>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <h4 class="card-title mb-0">Cloud DevOps Engineer Intern</h4>
+                        <span class="badge bg-primary">Irish Life</span>
+                    </div>
+                    <p class="text-muted small">February 2025 – August 2025</p>
+                    <ul>
+                        <li>Contributed to the GACS team, maintaining cloud infrastructure using <strong>Terraform,
+                                Azure DevOps, and PowerShell</strong>.</li>
+                        <li>Developed a reusable Recovery Services Vault IaC module and automated tagging for
+                            <strong>7,000+ resources</strong>.</li>
+                        <li>Managed malicious IP blocking modules (geo-location filtering) and executed vulnerability
+                            reports using KQL.</li>
+                        <li>Maintained environment health and handled Key Vault secret renewals.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card mb-4 shadow-sm">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <h4 class="card-title mb-0">Postal Operative</h4>
+                        <span class="badge bg-dark">An Post</span>
+                    </div>
+                    <p class="text-muted small">Dec 2021 – Dec 2025 (Seasonal)</p>
+                    <ul>
+                        <li>Worked effectively in a fast-paced team during peak season operations.</li>
+                        <li>Strengthened communication, adaptability, and time management skills.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="py-5">
+            <h2 class="mb-4 text-primary fw-bold">Academic & Personal Projects</h2>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100 shadow hover-card">
+                        <div class="card-header bg-dark text-white">Django Ecommerce</div>
+                        <div class="card-body">
+                            <h5 class="card-title">Italiano to Go</h5>
+                            <p class="card-text small">A full-stack food delivery platform.</p>
+                            <ul class="small text-muted">
+                                <li>Implemented authentication & account types.</li>
+                                <li>Built reviews system & unit tests.</li>
+                                <li>Agile methodology used.</li>
+                            </ul>
+                            <div class="mt-3">
+                                <span class="badge bg-info text-dark">Django</span>
+                                <span class="badge bg-info text-dark">Python</span>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-white border-top-0">
+                            <small class="text-success fw-bold">Grade: A</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100 shadow hover-card">
+                        <div class="card-header bg-dark text-white">Web Development</div>
+                        <div class="card-body">
+                            <h5 class="card-title">Home Haven</h5>
+                            <p class="card-text small">Home decoration ecommerce site.</p>
+                            <ul class="small text-muted">
+                                <li>Cart management & ordering features.</li>
+                                <li>Managed team coordination remotely.</li>
+                                <li>Focus on UI/UX design.</li>
+                            </ul>
+                            <div class="mt-3">
+                                <span class="badge bg-info text-dark">HTML/CSS</span>
+                                <span class="badge bg-info text-dark">JS</span>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-white border-top-0">
+                            <small class="text-success fw-bold">Grade: A</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100 shadow hover-card">
+                        <div class="card-header bg-dark text-white">Blazor WebAssembly</div>
+                        <div class="card-body">
+                            <h5 class="card-title">TVMaze Blazor App</h5>
+                            <p class="card-text small">A Blazor WASM application fetching TV show data.</p>
+                            <ul class="small text-muted">
+                                <li>Utilized TVMaze API for data consumption.</li>
+                                <li>Implemented responsive UI using MudBlazor component library.</li>
+                                <li>Showcases proficiency in C# and front-end state management.</li>
+                            </ul>
+                            <div class="mt-3">
+                                <span class="badge bg-info text-dark">C#</span>
+                                <span class="badge bg-info text-dark">Blazor WASM</span>
+                                <span class="badge bg-info text-dark">MudBlazor</span>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-white border-top-0">
+                            <small class="text-secondary fw-bold">Awaiting Grading</small>
+                        </div>
+                    </div>
+                </div>
+                </div>
+        </section>
+
+        <section id="education" class="py-5">
+            <div class="row"> 
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <h2 class="mb-4 text-primary fw-bold">Education</h2>
+                    <div class="list-group shadow-sm">
+                        <div class="list-group-item list-group-item-action">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">BSc (Hons) in Computing</h5>
+                                <small>2022 - Present</small>
+                            </div>
+                            <p class="mb-1 text-primary">Technological University Dublin</p>
+                            <small><strong>Avg GPA: 3.52 (First Class Honours)</strong></small>
+                            <p class="small mt-2">
+                                <strong>Key Modules:</strong> DSA (A), Cloud Services (B-), Software Dev 3 (A), Advanced DB
+                                (A).
+                            </p>
+                        </div>
+                        <div class="list-group-item list-group-item-action">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Pre-degree Computing</h5>
+                                <small>2021 - 2022</small>
+                            </div>
+                            <p class="mb-1 text-primary">Crumlin College of Further Education</p>
+                            <small><strong> QQI Level 5 Award with Merit </strong></small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="mb-4 text-primary fw-bold">Achievements</h2>
+                    <ul class="list-group shadow-sm mb-4">
+                        <li class="list-group-item"><i class="fa-solid fa-trophy text-warning me-2"></i> TUH AWS Health Hackathon 2023 - 
+                            <a href="https://www.imt.ie/news/tu-dublin-students-create-innovative-tech-based-solutions-to-tackle-healthcare-issues-26-09-2023/">
+                                <strong>Best Patient Benefit</strong>
+                            </a></li>
+                        <li class="list-group-item"><i class="fa-solid fa-certificate text-success me-2"></i> NVIDIA DLI -
+                            <a href="https://learn.nvidia.com/certificates?id=dfb3ce98989e44d395736401c86afad3">
+                            <strong>Fundamentals of Deep Learning</strong>
+                            </a></li>
+                        <li class="list-group-item"><i class="fa-solid fa-users text-info me-2"></i> <strong>PRO
+                                (2023-24)</strong> TU Dublin Student Developers Society</li>
+                    </ul>
+                    <h3 class="mb-3 text-primary">Interests</h3>
+                    <p class="text-muted">
+                        Technology trends, PC building, real-time strategy gaming, fitness, and spending time with family
+                        and friends.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="text-center py-5 my-5 bg-light rounded shadow-sm">
+            <h2 class="mb-3 fw-bold">Get In Touch</h2>
+            <p class="mb-4">I am currently looking for graduate opportunities. Feel free to reach out!</p>
+            <button type="button" class="btn btn-primary btn-lg px-5" data-bs-toggle="modal"
+                data-bs-target="#contactModal">
+                Contact Me
+            </button>
+        </section>
+    </div>
+
+    <footer class="bg-dark text-white text-center p-4">
+        <div class="container">
+            <div class="mb-3">
+                <a href="https://linkedin.com/in/aaron-farrelly" class="text-white mx-2 text-decoration-none"><i
+                        class="fab fa-linkedin fa-lg"></i> LinkedIn</a>
+                <a href="https://github.com/afarrelly90" class="text-white mx-2 text-decoration-none"><i
+                        class="fab fa-github fa-lg"></i> GitHub</a>
+            </div>
+            <small>&copy; 2025 Aaron Farrelly. Built with Bootstrap 5.</small>
+        </div>
+    </footer>
+
+    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="contactModalLabel">Contact Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Thank you for your interest. You can contact me via:</p>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><strong>Email:</strong> <a
+                                href="mailto:mraaronfarrelly@gmail.com">mraaronfarrelly@gmail.com</a></li>
+                        <li class="mb-2"><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/aaron-farrelly"
+                                target="_blank">linkedin.com/in/aaron-farrelly</a></li>
+                        <li class="mb-2"><strong>Location:</strong> Dublin, Ireland</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a href="mailto:mraaronfarrelly@gmail.com" class="btn btn-primary">Send Email</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
