--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center d-none d-md-block">
-                    <img src="images/profile_photo.jpeg" alt="Aaron Farrelly"
+                    <img src="images/profile_photo.jpeg" alt="Aaron Farrelly profile photo"
                         class="img-fluid rounded-circle border border-4 border-white shadow">
                 </div>
             </div>
