Added hosted at link to components.html

--- a/components.html
+++ b/components.html
@@ -24,8 +24,8 @@
 
     <div class="container my-5">
         <h1 class="text-primary fw-bold mb-4">Portfolio Technical Documentation</h1>
-        <p class="lead">This document outlines the usage of Bootstrap 5 components and custom JavaScript implementations within the main <code>index.html</code> portfolio page.</p>
-
+        <p class="lead">This document outlines the usage of Bootstrap 5 elements and custom JavaScript implementations within the main <code>index.html</code> portfolio page.</p>
+        <p>The website is hosted at: <a href="https://afarrelly90.github.io/Data-Vis-CA2/"> https://afarrelly90.github.io/Data-Vis-CA2/</a></p>
         <hr class="my-5">
 
         <section id="bootstrap-components" class="mb-5">
